--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             app:bootstrapBrand="info"
             app:roundedCorners="true"
             android:hint="@string/password"
+            android:inputType="textPassword"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
