--- a/app/src/main/res/menu/activity_navigation_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_menu_drawer.xml
@@ -19,6 +19,10 @@
             android:id="@+id/profile_menu"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/profile" />
+        <item
+            android:id="@+id/exit_menu"
+            android:icon="@drawable/ic_close_light"
+            android:title="@string/exit" />
 
     </group>
 
