--- a/app/src/main/res/layout/activity_super_market_checked_in.xml
+++ b/app/src/main/res/layout/activity_super_market_checked_in.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context="com.br.cdr.mercadobarato.activity.AddProductActivity">
+    tools:context="com.br.cdr.mercadobarato.activity.SuperMarketCheckedInActivity">
 
 
     <RelativeLayout
