--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,17 +18,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="-15dp">
 
         <com.beardedhen.androidbootstrap.BootstrapEditText
             android:id="@+id/login_field"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="70dp"
-            android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:hint="@string/login"
             android:inputType="textPersonName"
             app:bootstrapBrand="info"
@@ -41,9 +41,9 @@
             android:layout_height="45dp"
             android:layout_below="@id/login_field"
             android:layout_centerHorizontal="true"
-            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:hint="@string/password"
             android:inputType="textWebPassword"
             app:bootstrapBrand="info"
@@ -57,25 +57,21 @@
             android:id="@+id/button_login"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password_field"
-            android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
             android:text="@string/login"
             android:textAlignment="center"
             app:bootstrapBrand="success"
             app:bootstrapSize="xl"
             app:buttonMode="regular"
             app:roundedCorners="true"
-            app:showOutline="false" />
+            app:showOutline="false"
+            android:layout_below="@+id/password_field"
+            android:layout_alignEnd="@+id/password_field" />
 
         <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/btn_signup"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/button_login"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
             android:padding="12dp"
             android:text="@string/sign_up"
             android:textAlignment="center"
@@ -83,7 +79,9 @@
             app:bootstrapSize="xl"
             app:buttonMode="regular"
             app:roundedCorners="true"
-            app:showOutline="false" />
+            app:showOutline="false"
+            android:layout_below="@+id/password_field"
+            android:layout_toStartOf="@+id/button_login" />
 
     </RelativeLayout>
 
