--- a/app/src/main/res/layout/main_bar.xml
+++ b/app/src/main/res/layout/main_bar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:background="@color/azul_logo"
     android:textAlignment="center">
 
@@ -10,10 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingBottom="10dp"
-        android:paddingLeft="75dp"
-        android:paddingRight="75dp"
-        android:paddingTop="10dp"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
         android:src="@drawable/logo" />
 
 </android.support.v7.widget.Toolbar>
