--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/azul_logo"
     tools:context="com.br.cdr.mercadobarato.activity.RegisterActivity">
 
     <include
@@ -14,84 +15,71 @@
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/name_field"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
         android:layout_below="@+id/main_bar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="70dp"
-        android:ems="10"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:hint="@string/name"
         android:inputType="textPersonName"
-        app:roundedCorners="true" />
+        app:roundedCorners="true"
+        app:bootstrapSize="lg"/>
 
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/username_field_register"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/name_field"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="21dp"
-        android:ems="10"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:hint="@string/username"
         android:inputType="textPersonName"
-        app:roundedCorners="true" />
+        android:layout_below="@+id/name_field"
+        android:layout_centerHorizontal="true"
+        app:roundedCorners="true"
+        app:bootstrapSize="lg"/>
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/email_field"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
-        android:layout_alignStart="@+id/username_field_register"
-        android:layout_below="@+id/username_field_register"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:ems="10"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        app:roundedCorners="true" />
+        app:roundedCorners="true"
+        android:layout_below="@+id/username_field_register"
+        android:layout_alignParentStart="true"
+        app:bootstrapSize="lg"/>
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/password_field_register"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
-        android:layout_alignStart="@+id/email_field"
-        android:layout_below="@+id/email_field"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:ems="10"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:hint="@string/password"
         android:inputType="textPassword"
-        app:roundedCorners="true" />
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/confirm_password"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
-        android:layout_alignStart="@+id/password_field_register"
-        android:layout_below="@+id/password_field_register"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:ems="10"
-        android:hint="@string/confirm_password"
-        android:inputType="textPassword"
-        app:roundedCorners="true" />
+        app:roundedCorners="true"
+        android:layout_below="@+id/email_field"
+        android:layout_alignParentEnd="true"
+        app:bootstrapSize="lg"/>
 
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/button_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/confirm_password"
-        android:layout_below="@+id/confirm_password"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="23dp"
         android:text="@string/register"
         app:bootstrapBrand="success"
-        app:bootstrapSize="lg"
         app:buttonMode="regular"
-        app:roundedCorners="true" />
+        app:roundedCorners="true"
+        android:layout_below="@+id/password_field_register"
+        android:layout_centerHorizontal="true"
+        app:bootstrapSize="xl"/>
 
 </RelativeLayout>
 
