--- a/app/src/main/res/menu/activity_navigation_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_menu_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/add_products_menu"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/productPrice" />
+            android:title="@string/add_product" />
 
         <item
             android:id="@+id/compare_products"
