--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,100 +15,106 @@
     <include
         android:id="@+id/main_bar"
         layout="@layout/main_bar"/>
-
-    <RelativeLayout
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <com.beardedhen.androidbootstrap.BootstrapEditText
-            android:id="@+id/login_field"
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="70dp"
-            android:hint="@string/login"
-            android:inputType="textPersonName"
-            app:bootstrapBrand="info"
-            app:bootstrapSize="lg"
-            app:roundedCorners="true" />
+            android:layout_height="match_parent">
 
-        <com.beardedhen.androidbootstrap.BootstrapEditText
-            android:id="@+id/password_field"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_below="@id/login_field"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:hint="@string/password"
-            android:inputType="textWebPassword"
-            app:bootstrapBrand="info"
-            app:bootstrapSize="lg"
-            app:roundedCorners="true" />
+            <com.beardedhen.androidbootstrap.BootstrapEditText
+                android:id="@+id/login_field"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="70dp"
+                android:hint="@string/login"
+                android:inputType="textPersonName"
+                app:bootstrapBrand="info"
+                app:bootstrapSize="lg"
+                app:roundedCorners="true" />
+
+            <com.beardedhen.androidbootstrap.BootstrapEditText
+                android:id="@+id/password_field"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_below="@id/login_field"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="@string/password"
+                android:inputType="textWebPassword"
+                app:bootstrapBrand="info"
+                app:bootstrapSize="lg"
+                app:roundedCorners="true" />
 
 
-        <!-- Signup Button -->
+            <!-- Signup Button -->
 
-        <com.beardedhen.androidbootstrap.BootstrapButton
-            android:id="@+id/button_login"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/password_field"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:text="@string/login"
-            android:textAlignment="center"
-            app:bootstrapBrand="success"
-            app:bootstrapSize="xl"
-            app:buttonMode="regular"
-            app:roundedCorners="true"
-            app:showOutline="false"
-            tools:ignore="RtlHardcoded" />
+            <com.beardedhen.androidbootstrap.BootstrapButton
+                android:id="@+id/button_login"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/password_field"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:text="@string/login"
+                android:textAlignment="center"
+                app:bootstrapBrand="success"
+                app:bootstrapSize="xl"
+                app:buttonMode="regular"
+                app:roundedCorners="true"
+                app:showOutline="false"
+                tools:ignore="RtlHardcoded" />
 
-        <com.beardedhen.androidbootstrap.BootstrapButton
-            android:id="@+id/btn_signup"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/button_login"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:padding="12dp"
-            android:text="@string/sign_up"
-            android:textAlignment="center"
-            app:bootstrapBrand="primary"
-            app:bootstrapSize="xl"
-            app:buttonMode="regular"
-            app:roundedCorners="true"
-            app:showOutline="false" />
+            <com.beardedhen.androidbootstrap.BootstrapButton
+                android:id="@+id/btn_signup"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/button_login"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:padding="12dp"
+                android:text="@string/sign_up"
+                android:textAlignment="center"
+                app:bootstrapBrand="primary"
+                app:bootstrapSize="xl"
+                app:buttonMode="regular"
+                app:roundedCorners="true"
+                app:showOutline="false" />
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/loginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:padding="12dp"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:padding="12dp"
+                android:paddingBottom="20dp"
+                android:paddingTop="20dp"
 
-            android:layout_below="@+id/btn_signup"
-            android:layout_centerHorizontal="true" />
+                android:layout_below="@+id/btn_signup"
+                android:layout_centerHorizontal="true" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:indeterminate="true"
-            android:visibility="gone" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:indeterminate="true"
+                android:visibility="gone" />
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 
 </LinearLayout>
 
