--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
     <include
         android:id="@+id/main_bar"
         layout="@layout/main_bar"/>
+
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
-
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -95,13 +95,16 @@
                 android:id="@+id/loginButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="10dp"
                 android:padding="12dp"
-                android:paddingBottom="20dp"
-                android:paddingTop="20dp"
-
+                android:paddingBottom="13dp"
+                android:paddingTop="13dp"
+                android:paddingLeft="18dp"
                 android:layout_below="@+id/btn_signup"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignStart="@+id/btn_signup"
+                android:layout_alignEnd="@+id/btn_signup"
+                android:textAlignment="center" />
+
 
             <ProgressBar
                 android:id="@+id/progressBar"
