--- a/app/src/main/res/layout/fragment_productitem.xml
+++ b/app/src/main/res/layout/fragment_productitem.xml
@@ -3,13 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="3">
 
     <TextView
         android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/text_margin"
+        android:layout_weight="1"
         android:textAppearance="?attr/textAppearanceListItem" />
 
 
@@ -20,7 +21,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
-        android:layout_weight="2.41"
+        android:layout_weight="2"
         android:drawableRight="@android:drawable/ic_menu_delete"
         />
 </LinearLayout>
